--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
         const fibonacciSequence = val => {
             let fibArr = [0,1];
-                for(let i=2; i<=val; i++){
-                    if(i>1) {
-                        fibArr.push(fibArr[i-1] + fibArr[i-2])
-                    }
-                } 
-                return fibArr;
-            }
+            for(let i=2; i<=val; i++){
+                if(i>1) {
+                    fibArr.push(fibArr[i-1] + fibArr[i-2])
+                }
+            } 
+            return fibArr;
+        }
             
         console.log(fibonacciSequence(5))
 
@@ -67,7 +67,6 @@
 
         const lrgstfv = (str) => {
             let len = str.length;
-            let strt = 0;
             let ff = [];
             for(i = 0; i < len; i++){
                 ff.push(str.substring(i, i + 5))
@@ -76,6 +75,23 @@
         }
 
         console.log(lrgstfv("8949574857475645"))
+
+
+        const isPalindrome = str => str.split("").reverse().join("") === str
+        console.log(isPalindrome("cac"));
+
+
+
+        const  anagram = (s1, s2) => s1.split("").sort().join("") === s2.split("").sort().join("")
+        console.log(anagram("anagram", 'nagaram'))
+
+        // FIZZBUZZ
+        const fizzBuzz =  () => {
+            for(let i=1; i<=100; i++) {
+                i % 3 == 0 ? console.log("Fizz" + i) : i % 5 == 0  ? console.log("Buzz" + i) : i % 3 == 0 && i % 5 == 0 ? console.log("FizzBuzz" + i) : null
+            }
+        }
+        fizzBuzz()
     </script>
 </html>
 
