--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     </body>
 
     <script type="text/javascript">
-        // Algorithm Questions
         // Reverse a string
         // Palindrome (reads same forward and reversed)
         // Reversing an integer
@@ -46,16 +45,7 @@
             return fibArr;
         }
             
-        // console.log(fibonacciSequence(7))
-
-        const fibRecur = n => {
-            if(n < 2) {
-                return n
-            }
-            return fibRecur(n-1) + fibRecur(n-2)
-        }
-
-        console.log(fibRecur(10))
+        console.log(fibonacciSequence(7))
 
         const mumbler = str => {
             const arr = []
@@ -67,7 +57,7 @@
 
         console.log(mumbler("Eben"))
 
-        const lrgstfv = (str) => {
+        const largestFive = (str) => {
             let len = str.length;
             let ff = [];
             for(i = 0; i < len; i++){
@@ -76,11 +66,11 @@
             return ff.sort().reverse()[0];
         }
 
-        console.log(lrgstfv("8949574857475645"))
+        console.log(largestFive("8949574857475645"))
 
 
         const isPalindrome = str => str.split("").reverse().join("") === str
-        // console.log(isPalindrome("cac"));
+        console.log(isPalindrome("cac"));
 
         // OR USING EVERY FUNCTION
         const palindrome = str => {
@@ -267,26 +257,37 @@
             steps(n, row, stair)
          }
 
-         steps(6)
+         // steps(6)
 
-          function stepsPyramid(n) {
-            let midpoint = Math.floor(((2 * n) - 1) / 2)
-            console.log(midpoint)
-           for(let row=0; row<n; row++){
-            let stair = ''
-            for(let col=0; col<((2 * n) - 1); col++) {
-                if(midpoint - row <= col && midpoint + row >= col) {
-                    stair += '#'
-                }else {
-                    stair += ' '
-                }
-            } 
-             console.log(stair)
-           }
+        function stepsPyramid(n) {
+            let result = ''
+            let base = ((2*n) -1)
+            for(let i=1; i<=n; i++) {
+                let pillars = (2*i) -1;
+                let spaces = (base - pillars) / 2
+                result += ' '.repeat(spaces) + '#'.repeat(pillars) + ' '.repeat(spaces)  + '\n'
+            }
+            console.log(result);
+        }
+
+         stepsPyramid(4)
+
+         function stepsPyramidRecursion(n, row=1) {
+            let pillars = ((2*row) - 1)
+            let spaces = (((2*n) - 1) - pillars) / 2
+            let result = ''
+
+            if(row === n) {
+                return '#'.repeat(pillars)
+            }
+
+            result += ' '.repeat(spaces) + '#'.repeat(pillars) + ' '.repeat(spaces) + '\n' +
+            stepsPyramidRecursion(n, row + 1)
+
+            return result
 
          }
-
-         stepsPyramid(2)
+         console.log(stepsPyramidRecursion(4))
 
          // Factorial
          const Factorial = (num) => {
